  movements such as:

  -----[deleted/moved 40 after 44 (now at 152)]----- 
  -----[deleted/moved 42-43 after 44 (now at 154-155)]----- 
  -----[after 135 inserted/moved 152 (was at 40)]-----
  -----[after 135 inserted/moved 154-155 (was at 42-43)]-----

* Perforce integration has been improved to work with older versions
  of p4.

Version 1.8.2

* Codestriker now has the ability to view a specific file at a time in
  the view topic screen, with previous/next file links.  The old
  behaviour of viewing the entire topic text in one page is still the
  default behaviour.  The default behaviour can be changed by setting
  the $default_file_to_view variable in the configuration file.  Note
  there are now links on the view topic screen so the user can choose
  dynamically which viewing mode they would prefer to use.
  Contribution by Oliver Lohmann <oliver_lohmann@gmx.de>.

* Codestriker can now sort by the column headers in the topic list
  view, from Jason Remilliard.

* It is now possible to create Subversion topics by entering values
  in the START_TAG, END_TAG and MODULE fields on the create topic
  page, from Jason Remilliard.  See the manual for more details.

* In addition to the existing Subversion HTTP server support, it is
  now possible to integrate with a native Subversion server as well,
  from Jason Remilliard.

* Codestriker can now parse basic diff files (non unidiff and context
  diff), and also ClearCase serial diffs.

* A ClearCase repository object has been written by Kannan Goundan
  which works off a snapshot view.  With the ClearCase serial diff
  parser mentioned in the previous item, this provides a
  fully-functional ClearCase code-reviewing solution.

* Topic property change emails didn't have the "References" and
  "In-Reply-To" mail headers set correctly, so that those emails
  weren't grouped into the same "topic" email thread.

* The view topic display has been improved for diffs which contain new